force-app/main/default/objects/ClanLabel__c/ClanLabel__c.object-meta.xml
<CustomObject>
    <label>Clan Label</label>
    <nameField>
        <label>Clan Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clan Labels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>