force-app/main/default/objects/ClanLabel__c/fields/Clan__c.field-meta.xml
<CustomField>
    <fullName>Clan__c</fullName>
    <label>Clan</label>
    <referenceTo>Clan__c</referenceTo>
    <relationshipLabel>Clan Labels</relationshipLabel>
    <relationshipName>ClanLabels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>