force-app/main/default/objects/ClanLabel__c/fields/IconUrls__c.field-meta.xml
<CustomField>
    <fullName>IconUrls__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Icon Urls</label>
    <referenceTo>IconUrls__c</referenceTo>
    <relationshipLabel>Clan Labels</relationshipLabel>
    <relationshipName>ClanLabels</relationshipName>
    <type>Lookup</type>
</CustomField>