force-app/main/default/objects/ClanLabel__c/fields/Label_Id__c.field-meta.xml
<CustomField>
    <fullName>Label_Id__c</fullName>
    <externalId>true</externalId>
    <label>Label Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>